# materialize

./: Cargo.toml  deny.toml  mypy.ini  pyproject.toml
ci/builder/: Dockerfile  nightly.stamp  requirements-dev.txt  requirements.txt  stable.stamp
demo/billing/: Cargo.toml
doc/developer/design/: 20220303_connectors.md
doc/user/content/: release-notes.md
doc/user/data/: sql_funcs.yml
misc/dbt-materialize/: setup.py
misc/python/: mzbuild.py
misc/python/materialize/: mzbuild.py  mzcompose.py
src/adapter/src/: coord.rs
src/avro/: Cargo.toml
src/ccsr/: Cargo.toml  lib.rs
src/compute-client/src/: command.proto  command.rs  controller.rs  response.proto  response.rs  service.rs
src/compute/src/: compute_state.rs  reconciliation.rs
src/controller/src/: lib.rs
src/coord/: Cargo.toml  sink_connector.rs
src/coord/src/: catalog.rs  (+4 more)
src/dataflow/: Cargo.toml
src/dataflow-types/: Cargo.toml
src/dataflowd/: Cargo.toml
src/http-proxy/: Cargo.toml
src/interchange/: Cargo.toml  avro.rs  protobuf.rs
src/jackdaw/: Cargo.toml  build.rs  update.sh
src/jackdaw/resources/messages/: README.md
src/jackdaw/src/: client.rs  codec.rs  conn.rs  error.rs  lib.rs  messages.rs
src/jackdaw/tests/: jackdaw.rs
src/kafka-util/: Cargo.toml
src/kubernetes-util/: Cargo.toml
src/lowertest-derive/: Cargo.toml
src/materialized/: Cargo.toml
src/metrics/: Cargo.toml
src/orchestrator-kubernetes/: Cargo.toml
src/ore/: Cargo.toml
src/persist/: Cargo.toml
src/pgwire/: Cargo.toml
src/repr/: Cargo.toml
src/s3-datagen/: Cargo.toml
src/secrets/: Cargo.toml
src/secrets-filesystem/: Cargo.toml
src/secrets-filesystem/src/: lib.rs
src/secrets-kubernetes/: Cargo.toml
src/secrets-kubernetes/src/: lib.rs
src/sql/: Cargo.toml  query.rs  statement.rs
src/sql-parser/: Cargo.toml
src/stash/: Cargo.toml  foo
src/storage/: Cargo.toml
src/storage2/: Cargo.toml  build.rs
src/storage2/src/: lib.rs  service.proto  service.rs  source.rs
src/symbiosis/: lib.rs
src/testdrive/: Cargo.toml
src/walkabout/: Cargo.toml
test/correctness/: Cargo.toml
test/perf-kinesis/: Cargo.toml
test/sqllogictest/: arithmetic.slt  blah.slt  chbench.slt  repro.slt  subquery.slt  tpch.slt
test/test-util/: Cargo.toml
test/testdrive/: mzcompose.ssl.yml  protobuf-corrupted.td  protobuf-import.td
(+110 files in other folders)
