[package]
name = "jackdaw"
description = "A low-level Kafka API client."
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
bytes = "1.0.1"
futures = "0.3.13"
serde = { version = "1.0.124", features = ["derive"] }
tokio = { version = "1.2.0", features = ["net"] }
tokio-util = { version = "0.6.4", features = ["codec"] }
walkdir = "2.3.1"

[build-dependencies]
anyhow = "1.0.38"
fstrings = "0.2.3"
json_comments = "0.2.0"
ore = { path = "../ore" }
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
