[package]
name = "mz-secrets-kubernetes"
description = "Secrets management via Kubernetes."
version = "0.0.0"
edition = "2021"
rust-version = "1.61.0"
publish = false

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
k8s-openapi = { version = "0.15.0", features = ["v1_22"] }
kube = { version = "0.73.1", features = ["ws"] }
mz-kubernetes-util = { path = "../kubernetes-util" }
mz-repr = { path = "../repr" }
mz-secrets = { path = "../secrets" }
rand = "0.8.5"
tokio = { version = "1.18.2" }
tracing = "0.1.34"
